--- a/css/style.css
+++ b/css/style.css
@@ -1026,7 +1026,7 @@
 /* Banner */
 
 	#banner {
-		background-image: url(../images/dark_tint.png), url(../images/bokeh_car_lights_bg.jpg);
+		background-image: url(../images/dark_tint.png), url(../images/Constellation.jpg);
 		background-position: center center;
 		background-size: cover;
 		color: #ffffff;
